Ensure that submit button doesn't have webkit styling on ios

--- a/static/base.css
+++ b/static/base.css
@@ -86,6 +86,7 @@ input[type=submit] {
     font-size: 0.75rem;
     font-weight: 600;
     border-radius: 2rem;
+    -webkit-appearance: none;
 }
 
 button {
